<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:id="@+id/listLayout"
    android:clickable="true"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_substract_more"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@color/colorPrimary"
            android:backgroundTintMode="multiply"
            android:text="@string/button_min_min" />

        <Button
            android:id="@+id/button_substract"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@color/colorPrimary"
            android:backgroundTintMode="multiply"
            android:text="@string/button_min" />

        <TextView
            android:id="@+id/characteristicName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="2"
            android:text="@android:string/unknownName" />

        <EditText
            android:id="@+id/characteristicValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="2"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@string/zero" />

        <Button
            android:id="@+id/button_add"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@color/colorPrimary"
            android:backgroundTintMode="multiply"
            android:text="@string/button_plus" />

        <Button
            android:id="@+id/button_add_more"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:backgroundTint="@color/colorPrimary"
            android:backgroundTintMode="multiply"
            android:text="@string/button_plus_plus" />

    </TableRow>

</RelativeLayout>